Bug 432225 - Spell Checker does not always identify misspelled words; r+sr=peterv